# CEN

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cen/cli/: main.py
cen/core/: __init__.py  gmail.py  motion.py
